src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__pg_legacy_char__cast_pg_legacy_char_to_int32__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/pg_legacy_char.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Int32,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Int32,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastInt32ToPgLegacyChar(
            CastInt32ToPgLegacyChar,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
